--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 
 <div class="navbar bg-base-100 shadow-sm grid grid-cols-3">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">daisyUI</a>
+    <a class="btn btn-ghost text-xl">110-filmen</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
