--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,12 @@ import kodak_gul from "../assets/images/kodak_gul.jpg";
       <h2 class="place-self-center mt-10 mb-10">EN FILM DER IKKE ER GLEMT</h2>
     </div>
     <div>
-      <Image src={kodak} alt="kodak" class="lg:w-[60%] w-[100%] place-self-center" />
+      <Image src={kodak} alt="Photo by Immo Wegmann on Unsplash" class="lg:w-[60%] w-[100%] place-self-center" />
+      <p class="text-center text-sm mt-2">
+        Photo by <a href="https://unsplash.com/@tinkerman?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Immo Wegmann</a> on <a
+          href="https://unsplash.com/photos/white-and-blue-checked-textile--fJ8Rbnj8Mo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a
+        >
+      </p>
     </div>
   </section>
 
@@ -41,7 +46,12 @@ import kodak_gul from "../assets/images/kodak_gul.jpg";
       </p>
     </div>
     <div>
-      <Image src={kodakNu} alt="kodak" class="lg:w-[60%] w-[100%] place-self-center" />
+      <Image src={kodakNu} alt="kodakNu" class="lg:w-[60%] w-[100%] place-self-center" />
+      <p class="text-center text-sm mt-2">
+        Photo by <a href="https://unsplash.com/@jakobowens1?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jakob Owens</a> on <a
+          href="https://unsplash.com/photos/kodak-gold-200-box-wkirT2ac6Y0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a
+        >
+      </p>
     </div>
   </section>
 
@@ -58,7 +68,12 @@ import kodak_gul from "../assets/images/kodak_gul.jpg";
   <section>
     <div class="grid lg:grid-cols-2">
       <div>
-        <Image src={kodak_gul} alt="kodak" class="lg:w-[65%] w-[100%] place-self-center ml-40" />
+        <Image src={kodak_gul} alt="kodak gul" class="lg:w-[65%] w-[100%] place-self-center ml-40" />
+        <p class="text-center text-sm mt-2">
+          Photo by <a href="https://unsplash.com/@museumsvictoria?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Museums Victoria</a> on <a
+            href="https://unsplash.com/photos/kodak-films-box-eq9Mcakhmug?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a
+          >
+        </p>
       </div>
       <div class="mr-50">
         <h3 class="text-5xl mt-40">110-filmen fra Kodak fik et fald</h3>
