--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import kodak_gul from "../assets/images/kodak_gul.jpg";
     </div>
   </section>
 
-  <section class="bg-amber-300">
+  <section class="">
     <div class="place-self-center">
       <div class="m-50 mt-40">
         <p class="text-center text-2xl mr-30 ml-30">
@@ -37,7 +37,7 @@ import kodak_gul from "../assets/images/kodak_gul.jpg";
     </div>
   </section>
 
-  <section class="grid grid-cols-2 bg-amber-200">
+  <section class="grid grid-cols-2">
     <div class="ml-10">
       <h3 class="text-5xl">Fordele ved 110-filmen</h3>
       <p class="text-2xl">
@@ -56,7 +56,7 @@ import kodak_gul from "../assets/images/kodak_gul.jpg";
   </section>
 
   <section>
-    <div class="bg-amber-100">
+    <div class="">
       <h3 class="text-5xl place-self-center mt-50">Ulemper ved 110-filmen</h3>
       <p class="text-2xl m-60 mt-20">
         Ulempen ved 110-filmen var at den lille negativstørrelse gav mere kornede billeder sammenlignet med 35mm-film. 35mm-kompaktkameraer blev mindre og billigere med bedre linser, og det gjorde at
